I added a jumbotron and changed the background color to light brown

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
   </head>
   <body>
     <div class="container">
+      <div class="jumbotron">
       <h1>Book an appointment for dog walking with John!</h1>
+      </div>
+      </jumbotron>
       <img src="img/dog.jpg" alt="A photo of a dog.">
       <div id="blanks">
         <form>
